fix poopup dialog overflow

--- a/frontend/src/components/RichTextEditor/RichTextEditor.css
+++ b/frontend/src/components/RichTextEditor/RichTextEditor.css
@@ -5,6 +5,7 @@
   border-radius: 8px;
   padding-top: 1rem;
   margin-top: 1rem;
+  width: 466px;
 }
 
 .ProseMirror {
