--- a/frontend/src/templates/GuideTemplate/GuideTemplate.module.scss
+++ b/frontend/src/templates/GuideTemplate/GuideTemplate.module.scss
@@ -5,7 +5,8 @@
 
     background-color: var(--background-color);
     box-sizing: border-box;
-    width: 100%;
+    min-width: 100%;
+    width: fit-content;
 
     .popup {
         height: 100%;
@@ -47,6 +48,7 @@
         justify-content: flex-end;
         gap: 1rem;
         margin-top: 1rem;
+        height: 34px;
     }
 
 
